--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "beats-by-maad",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.7.0",
+   "npm": "please-use-npm"   
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
