--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=18.7.0",
-   "npm": "please-use-npm"   
+    "npm": ">=8.18.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
