--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.3"
