Testing Experimental code

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /.next/
 /out/
 
+
 # production
 /build
 
@@ -25,8 +26,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# local  files
+
+
 # local env files
 .env*.local
+.env.local
 
 # vercel
 .vercel
