--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.0.6",
+    "@prisma/client": "^4.8.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "firebase": "^9.15.0",
     "heroicons": "^2.0.13",
     "next": "13.0.6",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.41.0",
     "react-icons": "^4.7.1",
     "tailwind-scrollbar-hide": "^1.1.7",
@@ -32,6 +37,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4"
   }
 }
